# scratch_tools

./: .gitignore  LICENSE  README.md  index.html
.github/workflows/: pages.yml
gen_password_scratch/: README.md
gen_password_scratch/src/: password_generator.js
gen_password_scratch/web/: index.html
productivity-widgets/: README.md  package-lock.json  package.json
productivity-widgets/electron/: main.js  preload.js
productivity-widgets/renderer/: app.js  index.html  styles.css
productivity-widgets/src-tauri/: Cargo.toml  tauri.conf.json
productivity-widgets/src-tauri/capabilities/: default.json
productivity-widgets/src-tauri/src/: lib.rs  main.rs
