[package]
name = "productivity-widgets"
version = "0.1.0"
description = "Windows 11 transparent desktop productivity widgets."
authors = [""]
edition = "2021"
license = "GPL-3.0-or-later"

[lib]
name = "productivity_widgets_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
